--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -1,11 +1,21 @@
 .profile-container {
     display: flex;
-    justify-content: flex-end;
-    margin-top: 10em;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-end;
     width: 100%;
+    height: 42em;
 }
 
-.profile {
-    width: 65%;
-    height: 65%;
+.name {
+    font-family: 'Merriweather', serif;
+    color: whitesmoke;
+    margin-top: 4em;
+    padding-right: 7em;
+}
+
+.title {
+    font-family: 'Merriweather', serif;
+    color: whitesmoke;
+    padding-right: 7em;
 }
