--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 .App {
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: column nowrap;
     font-size: calc(1em + 1vw);
-    background: url('./media/light-ring.jpg') no-repeat;
-    background-size: 100%;
-    height: 100%;
     width: 100%;
 }
+
+h1 { font-size: 2em }
+h2 { font-size: 1.5em }
