--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -4,18 +4,23 @@
     justify-content: flex-start;
     align-items: flex-end;
     width: 100%;
-    height: 42em;
+    height: 0;
+    padding-bottom: 66.6666%;
+    background: url('../media/light-ring.jpg') no-repeat;
+    background-size: contain;
 }
 
 .name {
     font-family: 'Merriweather', serif;
     color: whitesmoke;
-    margin-top: 4em;
-    padding-right: 7em;
+    margin-top: 11vw;
+    padding-right: 12vw;
+    margin-bottom: 0.5em;
 }
 
 .title {
     font-family: 'Merriweather', serif;
     color: whitesmoke;
-    padding-right: 7em;
+    padding-right: 12vw;
+    margin-top: 0px;
 }
